# man-of-destruction

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  ThirdPartyNotices.txt
assets/shaders/: fragment.glsl  vertex.glsl
depend/glad/include/glad/: gl.h
depend/toml++/: toml.hpp
levels/: level_1.level  level_2.level  level_3.level  level_4.level  level_5.level  level_6.level  level_7.level  level_8.level  level_9.level
source/: main.cpp
source/core/: logging.h  minimal.h
source/core/audio/: sound.h  sound_mixer.cpp  sound_mixer.h
source/core/input/: action.h  button.h  controller.cpp  controller.h
source/core/maths/: maths.cpp  maths.h
source/core/video/: renderer.cpp  renderer.h  sprite.h  sprite_sheet.h  window.cpp  window.h
source/game/camera/: camera.cpp  camera.h
source/game/config/: configuration.cpp  configuration.h
source/game/entity/: dynamite.cpp  dynamite.h  dynamite_pickup.cpp  dynamite_pickup.h  entity.cpp  entity.h  player.cpp  player.h  splinter.cpp  splinter.h
source/game/level/: level.cpp  level.h  level_list.h
source/game/menu/: level_complete_menu.cpp  level_complete_menu.h  level_select_menu.cpp  level_select_menu.h  main_menu.cpp  main_menu.h  menu.cpp  menu.h  pause_menu.cpp  pause_menu.h
source/game/save/: save_slot.cpp  save_slot.h
tools/: level_editor.py
